Usar user.json y cambio de enunciados
* El enunciado se genera a partir de tests/tests-data
* Reemplazamos la lógica de pedir y guardar el e-mail del alumno por re-usar el
user.json del autocorector

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "preinstall": "node tests/generation.js",
+    "generate": "node tests/generation.js --force",
     "start": "node ./bin/www",
     "super": "supervisor ./bin/www",
     "test": "NODE_ENV=testing mocha -R spec",
