--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "zombie": "^6.1.4"
   },
   "info": {
-    "githubURL": "CORE-UPM/Entrega_examen",
+    "githubURL": "CORE-2020/Entrega_examen",
     "serverUrl": "https://autocorector.dit.upm.es/",
     "courseId": "8249",
     "assignmentId": "83669"
