--- a/package.json
+++ b/package.json
@@ -46,5 +46,7 @@
     "courseId": "8249",
     "assignmentId": "88504"
   },
-  "engines" : { "node" : ">=12 <=13" }
+  "engines": {
+    "node": ">=12 <=13"
+  }
 }
